# edit-tiktok

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  config.yaml  docker-compose.nvidia.yml  docker-compose.vaapi.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
assets/luts/: Agfa_Vista.cube  Fuji_Film.cube  Moody_Stock.cube  Portra_800.cube
scripts/: install_macos.sh  install_windows.bat  install_windows.ps1  run.bat
src/: app.py  cli.py  config.py  logging_config.py  models.py  queue_manager.py
src/ffmpeg_tools/: encoders.py  filters.py  probe.py  runner.py
src/integrations/: revid_api.py  telegram_bot.py  tiktok.py
src/processing/: audio.py  batch.py  caption_renderer.py  lut.py  metadata.py  pipeline.py  preflight.py  subtitles.py  video.py
src/processing/transcription/: __init__.py  base.py  groq.py  local_whisper.py  manager.py  models.py
src/storage/: __init__.py  base.py  google_drive.py  local.py  manager.py  telegram.py
src/utils/: cleanup.py  files.py  paths.py  platform.py  profiles.py  runtime_logging.py  timing.py
tests/: test_caption_renderer.py  test_cleanup.py  test_cli.py  test_config.py  test_docker_files.py  test_encoders.py  test_files.py  test_filters.py  test_logging_config.py  test_lut_selection.py  test_preflight.py  test_profiles.py  test_queue_runtime.py  test_runtime_logging.py  test_scene_segments.py  test_storage.py  test_subtitles.py  test_telegram_bot_api_config.py  test_telegram_progress.py  test_tiktokdl_fallback.py  test_transcription.py  test_wizard_input_check.py
